src/objects/Demand_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Demanded__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Demanded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Outstanding__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Name__c</fullName>
        <label>Charge Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demand_Invoice__c</fullName>
        <label>Demand Invoice</label>
        <referenceTo>Demand_Invoice__c</referenceTo>
        <relationshipLabel>Demand Details</relationshipLabel>
        <relationshipName>Demand_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Installment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Instalment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Outstanding__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Amount_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Amount_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Amount_3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Breakup_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Breakup 1</label>
        <referenceTo>Tax_Breakup__c</referenceTo>
        <relationshipLabel>Demand Details</relationshipLabel>
        <relationshipName>Demand_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Breakup_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Breakup 2</label>
        <referenceTo>Tax_Breakup__c</referenceTo>
        <relationshipLabel>Demand Details (Tax Breakup 2)</relationshipLabel>
        <relationshipName>Demand_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Breakup_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Breakup 3</label>
        <referenceTo>Tax_Breakup__c</referenceTo>
        <relationshipLabel>Demand Details (Tax Breakup 3)</relationshipLabel>
        <relationshipName>Demand_Details2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Demanded__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax Demanded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Outstanding__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Taxable_Amount_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Taxable Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Taxable_Amount_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Taxable Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>scppd_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Customer Pay Plan Detail 1</label>
        <referenceTo>Standard_Customer_Pay_Plan_Detail__c</referenceTo>
        <relationshipLabel>Demand Details</relationshipLabel>
        <relationshipName>Demand_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>scppd_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Customer Pay Plan Detail 2</label>
        <referenceTo>Standard_Customer_Pay_Plan_Detail__c</referenceTo>
        <relationshipLabel>Demand Details (Standard Customer Pay Plan Detail)</relationshipLabel>
        <relationshipName>Demand_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>scppd_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Customer Pay Plan Detail 3</label>
        <referenceTo>Standard_Customer_Pay_Plan_Detail__c</referenceTo>
        <relationshipLabel>Demand Details (Standard Customer Pay Plan Detail 3)</relationshipLabel>
        <relationshipName>Demand_Details2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>scppd_amount_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Instalment Breakup 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scppd_amount_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Instalment Breakup 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scppd_amount_3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Instalment Breakup 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Demand Detail</label>
    <nameField>
        <displayFormat>DD-{00000}</displayFormat>
        <label>Demand Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demand Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>